fix image not showing at loading

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -82,7 +82,7 @@
   display: flex;
   gap: 8px;
   overflow: hidden;
-  padding: 2rem;
+  padding: 0;
 }
 
 .cinematic-accordion-slider__panel {
